--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<meta name="environment" content="staging"/>
+<meta name="environment" content="production"/>
 <title>Roblox → Discord Webhook Proxy</title>
 <style>
   :root {
